# None of these applets depend on one another

applet_namespace = 'org.budgie-desktop.applet'
applets_dir = join_paths(plugin_libdir, applet_namespace)

subdir('budgie-menu')
subdir('clock')
subdir('caffeine')
subdir('icon-tasklist')
subdir('keyboard-layout')
subdir('lock-keys')
subdir('night-light')
subdir('notifications')
subdir('raven-trigger')
subdir('places-indicator')
subdir('separator')
subdir('show-desktop')
subdir('simple-tasklist')
subdir('spacer')
subdir('status')
subdir('tasklist')
subdir('trash')
subdir('tray')
subdir('user-indicator')
subdir('workspaces')
